compiler/testData/diagnostics/wasmTests/jsInterop/qualifier/jsQualifierNonExternal.kt
// FIR_IDENTICAL
@file:JsQualifier("a.b")

class <!NON_EXTERNAL_DECLARATION_IN_INAPPROPRIATE_FILE!>A<!> {
    class B

    fun bar() {}
}

<!NON_EXTERNAL_DECLARATION_IN_INAPPROPRIATE_FILE!>fun foo()<!> = "OK"